added fade in scroll

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <p id="third" style="align-self: flex-end;" class="primary_color">Fotografia</p>
                 <!-- SLIDER -->
                 <div class="slides">
-                    <input checked type="radio" name="radio_btn" id="radio1">
-                    <input type="radio" name="radio_btn" id="radio2">
-                    <input type="radio" name="radio_btn" id="radio3">
-                    <input type="radio" name="radio_btn" id="radio4">
-                    <input type="radio" name="radio_btn" id="radio5">
-                    <input type="radio" name="radio_btn" id="radio6">
+                    <input checked type="radio" name="radio_btn" class="radiobtn" id="radio1">
+                    <input type="radio" name="radio_btn" class="radiobtn" id="radio2">
+                    <input type="radio" name="radio_btn" class="radiobtn" id="radio3">
+                    <input type="radio" name="radio_btn" class="radiobtn" id="radio4">
+                    <input type="radio" name="radio_btn" class="radiobtn" id="radio5">
+                    <input type="radio" name="radio_btn" class="radiobtn" id="radio6">
                 </div>
             </div>
         </div>
