change href in slider

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="container_img">
-            <a href="./pages/fibra.html">
+            <a id="a_standard" href="./pages/fibra.html">
                 <img id="img_standard" alt="fibra" src="./img/11.jpg" />
             </a>
         </div>
@@ -63,7 +63,7 @@
     <!-- SECOND ARTICLE-->
     <article class="article_mobile_second" id="project" style="margin-top: 8rem;">
         <div class="container_img">
-            <a style="display: flex; justify-content: flex-end;" href="./pages/fibra.html">
+            <a id="a1" style="display: flex; justify-content: flex-end;" href="./pages/fibra.html">
                 <img id="img1" alt="fibra" src="./img/11.jpg" />
             </a>
         </div>
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <a class="container_mobile_image_third" href="./pages/drytech.html" style="width: 50%">
+        <a id="a2" class="container_mobile_image_third" href="./pages/drytech.html" style="width: 50%">
             <img id="img2" style="width: 100%" alt="adv" src="./img//drytech/drytech3.png" />
         </a>
     </article>
@@ -97,7 +97,7 @@
     <!-- FOURTH ARTICLE-->
     <article class="article_mobile_fourth" style="margin-top: 8rem;">
         <div class="container_img">
-            <a href="./pages/fashion.html" style="display: flex; justify-content: flex-end;">
+            <a id="a3" href="./pages/fashion.html" style="display: flex; justify-content: flex-end;">
                 <img id="img3" alt="fashion" src="./img/fashion/fashion4.jpg" />
             </a>
         </div>
