--- a/pages/drytech.html
+++ b/pages/drytech.html
@@ -29,12 +29,10 @@
 
     <!-- HEADER -->
     <header style="display: flex; flex-direction: column;">
-        <div class="arrow_left">
+        <div style="width: 50%; display: flex; justify-content: center; align-items: center;">
             <a href="../index.html">
-                <img src="../img/arrow-left.png" alt="arrow" />
+                <img class="arrow_desktop" style="margin-right: 25px" src="../img/arrow-left.png" alt="arrow" />
             </a>
-        </div>
-        <div style="width: 57%; display: flex; justify-content: center; align-items: center;">
             <div class="container_info">
                 <h2 class="primary_text">Drytech</h2>
                 <h2 class="primary_text">ADV</h2>
