--- a/pages/fibra.html
+++ b/pages/fibra.html
@@ -34,7 +34,11 @@
                 <img src="../img/arrow-left.png" alt="arrow" />
             </a>
         </div>
-        <div style="width: 57%; display: flex; justify-content: center; align-items: center;">
+        <div style="width: 50%; display: flex; justify-content: center; align-items: center;">
+            <a href="../index.html">
+                <img class="arrow_desktop" style="margin-right: 25px" src="../img/arrow-left.png" alt="arrow" />
+            </a>
+
             <div class="container_info">
                 <h2 class="primary_text">Fabri Fibra</h2>
                 <h2 class="primary_text">Caos Tour - 2022</h2>
