mod height mobile article

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="navbar_mobile">
         <img src="./img/logo.png" alt="logo">
     </div>
-    <article style="padding: 20px 20px; height: 100vh;">
+    <article class="mod_mobile" style="padding: 20px 20px; height: 100vh;">
         <div class="container_text">
             <!-- NAVBAR -->
             <nav>
@@ -137,7 +137,7 @@
             <div class="container_info container_info_mobile" style="position: relative; top: -3rem;">
                 <h2 class="primary_text">Moda</h2>
                 <hr>
-                <p style="align-self: flex-end;" class="primary_color">Fotogragia</p>
+                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
             </div>
         </div>
     </article>
