--- a/pages/drytech.html
+++ b/pages/drytech.html
@@ -29,6 +29,11 @@
 
     <!-- HEADER -->
     <header style="display: flex; flex-direction: column;">
+        <div class="arrow_left">
+            <a href="../index.html">
+                <img src="../img/arrow-left.png" alt="arrow" />
+            </a>
+        </div>
         <div style="width: 50%; display: flex; justify-content: center; align-items: center;">
             <a href="../index.html">
                 <img class="arrow_desktop" style="margin-right: 25px" src="../img/arrow-left.png" alt="arrow" />
