--- a/pages/fashion.html
+++ b/pages/fashion.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- NAVBAR MOBILE -->
-    <div class="navbar_mobile">
+    <div id="fashion" class="navbar_mobile">
         <a href="../index.html">
             <img src="../img/logo.png" alt="logo">
         </a>
@@ -95,5 +95,10 @@
             </div>
         </div>
     </footer>
+    <div class="arrow_up">
+        <a href="#fashion">
+            <img src="../img/arrow-up.png" />
+        </a>
+    </div>
 
 </body>
