Fix home page alignment

--- a/index.html
+++ b/index.html
@@ -18,24 +18,23 @@
     <div class="navbar_mobile">
         <img src="./img/logo.png" alt="logo">
     </div>
-    <article class="mod_mobile" style="padding: 20px 20px; height: 100vh;">
-        <div class="container_text">
-            <!-- NAVBAR -->
-            <nav>
-                <img src="./img/logo.png" />
-                <ul class="primary_color">
-                    <li>
-                        <a href="#project">Progetti</a>
-                    </li>
-                    <li>
-                        <a href="#about">Su di me</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contatti</a>
-                    </li>
-                </ul>
-            </nav>
-
+    <!-- NAVBAR -->
+    <nav>
+        <img src="./img/logo.png" />
+        <ul class="primary_color">
+            <li>
+                <a href="#project">Progetti</a>
+            </li>
+            <li>
+                <a href="#about">Su di me</a>
+            </li>
+            <li>
+                <a href="#contact">Contatti</a>
+            </li>
+        </ul>
+    </nav>
+    <article style="margin-top: 90px;">
+        <div class="container_text" style="align-self: end; justify-content: flex-start;">
             <div class="container_info">
                 <h2 id="first" class="primary_text">Fabri Fibra</h2>
                 <h2 id="second" class="primary_text">Caos Tour - 2022</h2>
@@ -52,7 +51,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container_img">
             <a id="a_standard" href="./pages/fibra.html">
                 <img id="img_standard" alt="fibra" src="./img/11.jpg" />
@@ -61,15 +59,14 @@
     </article>
 
     <!-- SECOND ARTICLE-->
-    <article class="article_mobile_second" id="project" style="margin-top: 8rem;">
+    <article>
         <div class="container_img">
-            <a id="a1" style="display: flex; justify-content: flex-end;" href="./pages/fibra.html">
+            <a href="./pages/fibra.html">
                 <img id="img1" alt="fibra" src="./img/11.jpg" />
             </a>
         </div>
-
-        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div class="container_info" style="position: relative; top: 3rem;">
+        <div class="container_text">
+            <div class="container_info">
                 <h2 class="primary_text">Fabri Fibra</h2>
                 <h2 class="primary_text">Caos Tour - 2022</h2>
                 <hr>
@@ -79,31 +76,31 @@
     </article>
 
     <!-- THIRD ARTICLE-->
-    <article class="article_mobile_third" style="margin-top: 8rem;">
-        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div class="container_info container_info_mobile" style="position: relative; top: 3rem;">
+    <article style="justify-content: flex-end;">
+        <div class="container_text" style="justify-content: flex-start;">
+            <div class="container_info">
                 <h2 class="primary_text">Drytech</h2>
                 <h2 class="primary_text">ADV</h2>
                 <hr>
                 <p style="align-self: flex-end;" class="primary_color">Regia - Montaggio</p>
             </div>
         </div>
-
-        <a id="a2" class="container_mobile_image_third" href="./pages/drytech.html" style="width: 50%">
-            <img id="img2" style="width: 100%" alt="adv" src="./img//drytech/drytech3.png" />
-        </a>
+        <div class="container_img" style="width: 49.8%;">
+            <a href="./pages/drytech.html">
+                <img id="img2" alt="adv" src="./img//drytech/drytech3.png" />
+            </a>
+        </div>
     </article>
 
     <!-- FOURTH ARTICLE-->
-    <article class="article_mobile_fourth" style="margin-top: 8rem;">
+    <article>
         <div class="container_img">
-            <a id="a3" href="./pages/fashion.html" style="display: flex; justify-content: flex-end;">
+            <a href="./pages/fashion.html">
                 <img id="img3" alt="fashion" src="./img/fashion/fashion4.jpg" />
             </a>
         </div>
-
-        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div class="container_info container_info_mobile" style="position: relative; top: -3rem;">
+        <div class="container_text">
+            <div class="container_info">
                 <h2 class="primary_text">Fashion</h2>
                 <hr>
                 <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
@@ -112,29 +109,28 @@
     </article>
 
     <!-- FIFTH ARTICLE-->
-    <article class="article_mobile_fifth" style="margin-top: 8rem;">
-        <div class="container_info_mobile"
-            style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div class="container_info" style="position: relative; top: -3rem;">
+    <article>
+        <div class="container_text" style="justify-content: flex-start;">
+            <div class="container_info">
                 <h2 class="primary_text">Anagrafe</h2>
                 <hr>
                 <p style="align-self: flex-end;" class="primary_color">Direzione Artistica</p>
             </div>
         </div>
 
-        <div style="display: flex;" class="container_img">
+        <div class="container_img">
             <img id="img4" alt="anagrafe" src="./img/anagrafe/anagrafe.png" />
         </div>
     </article>
 
     <!-- SIXTH ARTICLE-->
-    <article class="container_mobile_sixth" style="margin-top: 8rem;">
-        <div style="display: flex; justify-content: flex-end;" class="container_img">
+    <article>
+        <div class="container_img">
             <img id="img5" alt="moda" src="./img/moda/moda1.png" />
         </div>
 
-        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div class="container_info container_info_mobile" style="position: relative; top: -3rem;">
+        <div class="container_text">
+            <div class="container_info">
                 <h2 class="primary_text">Moda</h2>
                 <hr>
                 <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
@@ -143,51 +139,58 @@
     </article>
 
     <!-- SEVENTH ARTICLE-->
-    <article class="article_mobile_seventh" style="margin-top: 8rem;">
-        <div class="container_info_mobile"
-            style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div class="container_info" style="position: relative; top: -3rem;">
+    <article>
+        <div class="container_text" style="justify-content: flex-start;">
+            <div class="container_info">
                 <h2 class="primary_text">Alpen Group</h2>
                 <hr>
                 <p style="align-self: flex-end;" class="primary_color">Fotografia - Video</p>
             </div>
         </div>
-
-        <div style="display: flex;" class="container_img">
+        <div class="container_img">
             <img id="img6" alt="alpen" src="./img/alpen-group/alpen.jpg" />
         </div>
     </article>
 
-    <!-- ABOUT SECTION-->
-    <section id="about" style="display: flex; flex-direction: column;">
-        <div class="mobile_image_photo" style="display: flex; align-items: center; justify-content: center;">
-            <img src="./img/sokolov.jpg" width="60%" />
+    <article style="margin-bottom: 117px;">
+        <div class="container_img" style="width: 66.4%;">
+            <img alt="sokolov" src="./img/sokolov.jpg" />
         </div>
+    </article>
 
-        <div style="width: 57%; display: flex; justify-content: center; align-items: center; margin: 30px 0;">
+    <article style="justify-content: flex-start; margin-bottom: 56px;">
+        <div style="width: 16.6%;"></div>
+        <div class="container_text" style="justify-content: flex-start;">
             <div class="container_info">
                 <h2 class="primary_text">Ivan Sokolov</h2>
                 <hr>
                 <p style="align-self: flex-end;" class="primary_color">Su di me</p>
             </div>
         </div>
+    </article>
 
-        <p style="align-self: center; width: 25%;" class="mobile_about_text">Ivan è un regista e
-            fotografo
-            con sede in
-            Svizzera. Si occupa
-            principalmente di
-            produzioni commerciali, musicali e aziendali. Il suo background spazia dalla fotografia e riprese di
+    <article style="justify-content: flex-start; margin-bottom: 209px;">
+        <div style="width: 16.6%;"></div>
+        <div style="width: 16.6%;"></div>
+        <p style="align-self: center; width: 33.2%; font-size: 30px;">
+            Ivan è un regista efotografo con sede in Svizzera.
+            Si occupa principalmente di produzioni commerciali, musicali e aziendali.
+            Il suo background spazia dalla fotografia e riprese di
             concerti, eventi e sport alla regia su set artificiali e alla fotografia in studio. Produce anche
             cortometraggi come Limbo (2001) e To a Hard knot a Sharp Blade (2022) ed è presentatore video nel progetto
             RSI EDU. Grazie alla sua esperienza in diverse aziende e settori, può portare a termine progetti video/foto
             da solo o svolgere un ruolo individuale all'interno di un team più ampio.</p>
+    </article>
 
-        <div style="display: flex; justify-content: center;" class="photo">
-            <img src="./img/ivan1.jpg" alt="ivan1" width="360px" />
-            <img src="./img/ivan.jpg" alt="ivan" width="360px" />
+    <article>
+        <div class="container_img" style="width: 33%;">
+            <img alt="ivan1" src="./img/ivan1.jpg" />
         </div>
-    </section>
+        <hr style="padding: 0.2%; margin: 0; border: 0;">
+        <div class="container_img" style="width: 33%;">
+            <img alt="ivan" src="./img/ivan.jpg" />
+        </div>
+    </article>
 
     <!-- FOOTER-->
     <footer id="contact">
