--- a/index.html
+++ b/index.html
@@ -194,11 +194,57 @@
 
     <!-- FOOTER-->
     <footer id="contact">
-        <div style="width: 57%; display: flex; justify-content: center; align-items: center;">
-            <div class="container_info">
-                <h2 class="primary_text">Contatti</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Restiamo in contatto</p>
+        <div style=" display: flex; margin-bottom: 200px;">
+            <div style="width: 16.6%;"></div>
+            <div class="container_text" style="justify-content: flex-start;">
+                <div class="container_info">
+                    <h2 class="primary_text">Contatti</h2>
+                    <hr>
+                    <p style="align-self: flex-end;" class="primary_color">Restiamo in contatto</p>
+                </div>
+            </div>
+        </div>
+        <div style=" display: flex; margin-bottom: 200px;">
+            <div style="width: 16.6%;"></div>
+            <div class="container_text" style="justify-content: flex-start; width: 66.4%;">
+                <div class="container_info contact">
+                    <h2 class="primary_text">Email</h2>
+                    <hr>
+                </div>
+                <hr style="padding: 1%; margin: 0; border: 0;">
+                <div class="container_info contact">
+                    <h2 class="primary_text">Phone</h2>
+                    <hr>
+                </div>
+                <hr style="padding: 1%; margin: 0; border: 0;">
+                <div class="container_info contact">
+                    <h2 class="primary_text">Instagram</h2>
+                    <hr>
+                </div>
+                <hr style="padding: 1%; margin: 0; border: 0;">
+                <div class="container_info contact">
+                    <h2 class="primary_text">Twitter</h2>
+                    <hr>
+                </div>
+            </div>
+        </div>
+        <div style=" display: flex;">
+            <div style="width: 16.6%;"></div>
+            <div class="container_text" style="justify-content: flex-start; width: 33.2%;">
+                <div class="container_info">
+                    <h2 class="primary_text">Request portfolio</h2>
+                    <hr style="margin-bottom: 10px; margin-top: 5px;">
+                </div>
+            </div>
+        </div>
+        <div style=" display: flex; margin-bottom: 200px;">
+            <div style="width: 16.6%;"></div>
+            <div class="container_text" style="justify-content: flex-start; width: 33.2%;">
+                <div class="container_info">
+                    <input type="text" style="border: 0" placeholder="Type your mail here">
+                    <hr style="margin-bottom: 10px; margin-top: 5px;">
+                </div>
+                <img class="arrow_desktop" style="margin-left: 50px;" src="./img/arrow-right.png" alt="arrow" />
             </div>
         </div>
     </footer>
