Dettaglio pagina fibra

--- a/pages/fibra.html
+++ b/pages/fibra.html
@@ -21,60 +21,64 @@
     </div>
 
     <!-- NAVBAR -->
-    <nav style="padding: 20px 20px ;">
-        <a href="../index.html">
-            <img src="../img/logo.png" alt="logo" width="210px">
-        </a>
+    <nav style="margin-top: -200px;">
+        <img src="../img/logo.png" alt="logo">
+        <div style="display: flex; justify-content: flex-end; margin-top: 140px;">
+            <a href="../index.html">
+                <img class="arrow_desktop" src="../img/arrow-left.png" alt="arrow" />
+            </a>
+        </div>
     </nav>
+
+    <article style="justify-content: flex-start; margin-top: 290px;">
+        <div style="width: 16.6%;"></div>
+        <div class="container_text" style="justify-content: flex-start;">
+            <div class="container_info">
+                <h2 id="first" class="primary_text">Fabri Fibra</h2>
+                <h2 id="second" class="primary_text">Caos Tour - 2022</h2>
+                <hr>
+                <p id="third" style="align-self: flex-end;" class="primary_color">Fotografia</p>
+            </div>
+    </article>
 
     <!-- HEADER -->
     <header style="display: flex; flex-direction: column;">
-        <div class="arrow_left">
-            <a href="../index.html">
-                <img src="../img/arrow-left.png" alt="arrow" />
-            </a>
-        </div>
-        <div style="width: 50%; display: flex; justify-content: center; align-items: center;">
-            <a href="../index.html">
-                <img class="arrow_desktop" style="margin-right: 25px" src="../img/arrow-left.png" alt="arrow" />
-            </a>
 
-            <div class="container_info">
-                <h2 class="primary_text">Fabri Fibra</h2>
-                <h2 class="primary_text">Caos Tour - 2022</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
-            </div>
-        </div>
-
-        <p class="mobile_text" style="align-self: center; width: 25%; margin-top: 50px;">Seguo come
+        <p class="mobile_text" style="align-self: center; width: 33.2%; margin-top: 50px; font-size: 30px;">Seguo come
             fotografo ufficiale
             il "Caos Tour" di
-            Fabri Fibra durante l'estate del 2022. Durante questo tour ho avuto la possibilità di fotografare Fabri sul
+            Fabri Fibra durante l'estate del 2022. Durante questo tour ho avuto la possibilità di fotografare Fabri
+            sul
             palco, nel backstage, così come di creare brevi video riassuntivi dei suoi concerti.</p>
 
-        <img class="img_fibra" src="../img/fabri-fibra/fabri.jpg" width="27%"
+        <img class="img_fibra" src="../img/fabri-fibra/fabri.jpg" width="33.2%"
             style="align-self: center; margin-top: 50px;" />
     </header>
 
     <!-- SECTION ONE -->
     <section class="mobile_section desktop_section" style="display: flex;">
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri7.jpg" />
         </div>
-
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
             class="container_img mobile_container">
-            <img alt="fibra" src="../img/fabri-fibra/fabri7.jpg" />
+            <p class="mobile_text" style="align-self: center; margin-top: 50px; font-size: 30px;">
+                Seguo come fotografo ufficiale il "Caos Tour" di
+                Fabri Fibra durante l'estate del 2022. Durante questo tour ho avuto la possibilità di fotografare Fabri
+                sul
+                palco, nel backstage, così come di creare brevi video riassuntivi dei suoi concerti.</p>
         </div>
     </section>
 
     <!-- SECTION TWO -->
     <section class="mobile_section desktop_section" style="display: flex;">
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri6.jpg" />
         </div>
-
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
             class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri4.jpg" />
@@ -83,10 +87,11 @@
 
     <!-- SECTION THREE -->
     <section class="mobile_section desktop_section" style="display: flex;">
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri5.jpg" />
         </div>
-
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
             class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri2.jpg" />
@@ -95,43 +100,42 @@
 
     <!-- SECTION FOUR -->
     <section class="mobile_section desktop_section" style="display: flex;">
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri1.jpg" />
         </div>
-
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
             class="container_img mobile_container">
             <img alt="fibra" src="../img/fabri-fibra/fabri3.jpg" />
         </div>
     </section>
 
-    <!-- FOOTER -->
-    <footer
-        style="position: relative; top: 13rem; padding-bottom: 50px; margin-top: 13rem; display: flex; justify-content: center; background-color: rgba(237,238,246,255); height: 30vh;">
-        <div style="width: 50%; display: flex; align-items: center; justify-content: center;">
-            <div style="width: 20%;">
-                <h2 class="primary_text">Email</h2>
-                <hr>
-            </div>
-            <div style="margin-left: 30px; width: 25%;">
-                <h2 class="primary_text">Phone</h2>
-                <hr>
-            </div>
-            <div class="container_info" style="margin-left: 30px; width: 25%;">
-                <h2 class="primary_text">Instagram</h2>
-                <hr>
-            </div>
-            <div class="container_info" style="margin-left: 30px; width: 25%;">
-                <h2 class="primary_text">Twitter</h2>
-                <hr>
+    <footer id="contact">
+        <div
+            style=" display: flex; padding-bottom: 200px; padding-top: 200px; margin-top: 500px; background-color: rgba(237,238,246,255);">
+            <div style="width: 16.6%;"></div>
+            <div class="container_text" style="justify-content: flex-start; width: 66.4%;">
+                <div class="container_info contact">
+                    <h2 class="primary_text">Email</h2>
+                    <hr>
+                </div>
+                <hr style="padding: 1%; margin: 0; border: 0;">
+                <div class="container_info contact">
+                    <h2 class="primary_text">Phone</h2>
+                    <hr>
+                </div>
+                <hr style="padding: 1%; margin: 0; border: 0;">
+                <div class="container_info contact">
+                    <h2 class="primary_text">Instagram</h2>
+                    <hr>
+                </div>
+                <hr style="padding: 1%; margin: 0; border: 0;">
+                <div class="container_info contact">
+                    <h2 class="primary_text">Twitter</h2>
+                    <hr>
+                </div>
             </div>
         </div>
-
     </footer>
-    <div class="arrow_up">
-        <a href="#fabri_fibra">
-            <img src="../img/arrow-up.png" />
-        </a>
-    </div>
-
 </body>
