Fashion Page and Drytech page

--- a/pages/drytech.html
+++ b/pages/drytech.html
@@ -21,31 +21,28 @@
     </div>
 
     <!-- NAVBAR -->
-    <nav style="padding: 20px 20px ;">
-        <a href="../index.html">
-            <img src="../img/logo.png" alt="logo" width="210px">
-        </a>
+    <nav style="margin-top: -200px;">
+        <img src="../img/logo.png" alt="logo">
+        <div style="display: flex; justify-content: flex-end; margin-top: 140px;">
+            <a href="../index.html">
+                <img class="arrow_desktop" src="../img/arrow-left.png" alt="arrow" />
+            </a>
+        </div>
     </nav>
+
+    <article style="justify-content: flex-start; margin-top: 290px; margin-bottom: 50px;">
+        <div style="width: 16.6%;"></div>
+        <div class="container_text" style="justify-content: flex-start;">
+            <div class="container_info">
+                <h2 id="first" class="primary_text">Drytech</h2>
+                <h2 id="second" class="primary_text">ADV</h2>
+                <hr>
+                <p id="third" style="align-self: flex-end;" class="primary_color">Regia - Montaggio</p>
+            </div>
+    </article>
 
     <!-- HEADER -->
     <header style="display: flex; flex-direction: column;">
-        <div class="arrow_left">
-            <a href="../index.html">
-                <img src="../img/arrow-left.png" alt="arrow" />
-            </a>
-        </div>
-        <div style="width: 50%; display: flex; justify-content: center; align-items: center;">
-            <a href="../index.html">
-                <img class="arrow_desktop" style="margin-right: 25px" src="../img/arrow-left.png" alt="arrow" />
-            </a>
-            <div class="container_info">
-                <h2 class="primary_text">Drytech</h2>
-                <h2 class="primary_text">ADV</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Regia - Montaggio</p>
-            </div>
-        </div>
-
         <p class="mobile_text" style="align-self: center; width: 25%; margin-top: 50px;">Seguo come fotografo ufficiale
             il "Caos Tour" di
             Fabri Fibra durante l'estate del 2022. Durante questo tour ho avuto la possibilità di fotografare Fabri sul
