--- a/pages/fashion.html
+++ b/pages/fashion.html
@@ -21,30 +21,27 @@
     </div>
 
     <!-- NAVBAR DESKTOP -->
-    <nav style="padding: 20px 20px;">
-        <a href="../index.html">
-            <img src="../img/logo.png" alt="logo" width="210px">
-        </a>
+    <nav style="margin-top: -200px;">
+        <img src="../img/logo.png" alt="logo">
+        <div style="display: flex; justify-content: flex-end; margin-top: 140px;">
+            <a href="../index.html">
+                <img class="arrow_desktop" src="../img/arrow-left.png" alt="arrow" />
+            </a>
+        </div>
     </nav>
+
+    <article style="justify-content: flex-start; margin-top: 290px; margin-bottom: 100px;">
+        <div style="width: 16.6%;"></div>
+        <div class="container_text" style="justify-content: flex-start;">
+            <div class="container_info">
+                <h2 id="first" class="primary_text">Fashion</h2>
+                <hr>
+                <p id="third" style="align-self: flex-end;" class="primary_color">Fotografia</p>
+            </div>
+    </article>
 
     <!-- HEADER -->
     <header style="display: flex; flex-direction: column;">
-        <div class="arrow_left">
-            <a href="../index.html">
-                <img src="../img/arrow-left.png" alt="arrow" />
-            </a>
-        </div>
-        <div style="width: 50%; display: flex; justify-content: center; align-items: center;">
-            <a href="../index.html">
-                <img class="arrow_desktop" style="margin-right: 25px" src="../img/arrow-left.png" alt="arrow" />
-            </a>
-            <div class="container_info">
-                <h2 class="primary_text">Fashion</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
-            </div>
-        </div>
-
         <p class="mobile_text" style="align-self: center; width: 25%; margin-top: 50px;">Nell'ambito di un progetto
             della stilista Cielo Solari ho girato una pubblicità di moda per alcuni outfit.</p>
     </header>
@@ -62,14 +59,22 @@
     </section>
 
     <!-- SECTION TWO  -->
-    <section class="mobile_section" style="display: flex;">
+    <section class="mobile_section desktop_section" style="display: flex;">
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
-            <img alt="fibra" src="../img/fashion/fashion3.jpg" />
+            <img alt="fashion1" src="../img/fashion/fashion3.jpg" />
         </div>
-
+        <div style="width: 16.6%;"></div>
         <div style="display: flex; justify-content: flex-end; position: relative; top: 13rem; margin-right: 20px;"
             class="container_img mobile_container">
-            <img alt="fibra" src="../img/fashion/fashion2.jpg" />
+            <img alt="fashion1" src="../img/fashion/fashion2.jpg" />
+        </div>
+    </section>
+
+    <section class="mobile_section desktop_section" style="display: flex;">
+        <div style="width: 16.6%;"></div>
+        <div style="display: flex; justify-content: flex-end;" class="container_img mobile_container">
+            <img alt="fashion1" src="../img/fashion/fashion4.jpg" />
         </div>
     </section>
 
