integrate api projects

--- a/index.html
+++ b/index.html
@@ -33,22 +33,14 @@
             </li>
         </ul>
     </nav>
-    <article style="margin-top: 90px;">
+    <main style="margin-top: 90px;">
         <div class="container_text" style="align-self: end; justify-content: flex-start;">
             <div class="container_info">
                 <h2 id="first" class="primary_text">Fabri Fibra</h2>
-                <h2 id="second" class="primary_text">Caos Tour - 2022</h2>
                 <hr>
                 <p id="third" style="align-self: flex-end;" class="primary_color">Fotografia</p>
                 <!-- SLIDER -->
-                <div class="slides">
-                    <input checked type="radio" name="radio_btn" class="radiobtn" id="radio1">
-                    <input type="radio" name="radio_btn" class="radiobtn" id="radio2">
-                    <input type="radio" name="radio_btn" class="radiobtn" id="radio3">
-                    <input type="radio" name="radio_btn" class="radiobtn" id="radio4">
-                    <input type="radio" name="radio_btn" class="radiobtn" id="radio5">
-                    <input type="radio" name="radio_btn" class="radiobtn" id="radio6">
-                </div>
+                <div class="slides"></div>
             </div>
         </div>
         <div class="container_img">
@@ -56,101 +48,7 @@
                 <img id="img_standard" alt="fibra" src="./img/11.jpg" />
             </a>
         </div>
-    </article>
-
-    <!-- SECOND ARTICLE-->
-    <article>
-        <div class="container_img">
-            <a href="./pages/fibra.html">
-                <img id="img1" alt="fibra" src="./img/11.jpg" />
-            </a>
-        </div>
-        <div class="container_text">
-            <div class="container_info">
-                <h2 class="primary_text">Fabri Fibra</h2>
-                <h2 class="primary_text">Caos Tour - 2022</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
-            </div>
-        </div>
-    </article>
-
-    <!-- THIRD ARTICLE-->
-    <article style="justify-content: flex-end;">
-        <div class="container_text" style="justify-content: flex-start;">
-            <div class="container_info">
-                <h2 class="primary_text">Drytech</h2>
-                <h2 class="primary_text">ADV</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Regia - Montaggio</p>
-            </div>
-        </div>
-        <div class="container_img" style="width: 49.8%;">
-            <a href="./pages/drytech.html">
-                <img id="img2" alt="adv" src="./img//drytech/drytech3.png" />
-            </a>
-        </div>
-    </article>
-
-    <!-- FOURTH ARTICLE-->
-    <article>
-        <div class="container_img">
-            <a href="./pages/fashion.html">
-                <img id="img3" alt="fashion" src="./img/fashion/fashion4.jpg" />
-            </a>
-        </div>
-        <div class="container_text">
-            <div class="container_info">
-                <h2 class="primary_text">Fashion</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
-            </div>
-        </div>
-    </article>
-
-    <!-- FIFTH ARTICLE-->
-    <article>
-        <div class="container_text" style="justify-content: flex-start;">
-            <div class="container_info">
-                <h2 class="primary_text">Anagrafe</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Direzione Artistica</p>
-            </div>
-        </div>
-
-        <div class="container_img">
-            <img id="img4" alt="anagrafe" src="./img/anagrafe/anagrafe.png" />
-        </div>
-    </article>
-
-    <!-- SIXTH ARTICLE-->
-    <article>
-        <div class="container_img">
-            <img id="img5" alt="moda" src="./img/moda/moda1.png" />
-        </div>
-
-        <div class="container_text">
-            <div class="container_info">
-                <h2 class="primary_text">Moda</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Fotografia</p>
-            </div>
-        </div>
-    </article>
-
-    <!-- SEVENTH ARTICLE-->
-    <article>
-        <div class="container_text" style="justify-content: flex-start;">
-            <div class="container_info">
-                <h2 class="primary_text">Alpen Group</h2>
-                <hr>
-                <p style="align-self: flex-end;" class="primary_color">Fotografia - Video</p>
-            </div>
-        </div>
-        <div class="container_img">
-            <img id="img6" alt="alpen" src="./img/alpen-group/alpen.jpg" />
-        </div>
-    </article>
+    </main>
 
     <article style="margin-bottom: 117px;">
         <div class="container_img" style="width: 66.4%;">
